2000-06-26  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c: (gnome_vfs_mime_magic_parse):
	Fix patterns with mask to apply the mask on the patterns -- this makes
	it allows the masked out bits to be anything.

	* test/test-mime.c: (main):
	Remove a bogus setting of the suffix_only flag.
	
	* data/mime/gnome-vfs-mime-magic:
	Fixed the mime type for compress files.
	Remove ambiguous magic rule for application/x-font-tex-tfm that was
	misfiring on .Xauthority files.
	Change photoshop rules to use the rule with a mask.

	* data/mime/gnome-vfs.keys:
	Change application/x-patch to text/x-patch

Mon Jun 26 16:04:48 2000  George Lebl <jirka@5z.com>

	* configure.in:  Test the sizes of int, long, and long long to figure
	  out if we have a 64bit type.  Then set up some variables and build
	  libgnomevfs/gnome-vfs-file-size.h with this information and a bunch
	  of defines about the types used.  Also since this header will be
	  installed into <prefix>/lib/vfs/include/libgnomevfs, the
	  VFS*_INCLUDEDIR's now add this directory

	* libgnomevfs/Makefile.am: install gnome-vfs-file-size.h to 
	  $(libdir)/vfs/include/libgnomevfs

	* gnome-vfs-constants.h: Remove the GNOME_VFS_*_FORMAT_STR macros as
	  they are replaced by ones in gnome-vfs-file-size.h

	* gnome-vfs-types.h: include gnome-vfs-file-size.h and remove the
	  GnomeVFSFileSize and GnomeVFSFileOffset typedefs

	* gnome-vfs-file-size.h.in:  Skeleton file created by configure to
	  typedef GnomeVFSFileSize and GnomeVFSFileOffset,
	  GNOME_VFS_*_FORMAT_STR macros and GNOME_VFS_*_IS_<type> macros

2000-06-26  Michael Meeks  <michael@helixcode.com>

	* doc/uri.txt: update.

	* test/Makefile.am: Add automatic regression testing.

	* test/test.input: Plaintext to test vs.

	* test/test.output: Standard good output

	* test/test.cmds: test-shell commands to execute.

	* test/test-shell.c (close_file, kill_file_cb, register_file),
	(close_files): mange named file handles.