@@ -1,5 +1,5 @@
 #
-# Configuration file for using the gnome-vfs library
+#  Configuration file for using the gnome-vfs library
 #
 VFS_LIBDIR="@VFS_LIBDIR@"
 VFS_LIBS="@VFS_LIBS@"
